# Cc-codex-flow

./: .codex-prompt.txt  .gitignore  .npmrc  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
.playwright-mcp/: page-2026-05-23T14-14-28-543Z.yml
docs/: USAGE.md
docs/evidence/: README.md  code_review_findings.json
docs/screenshots/: 05-failed-state.html
public/: streaming_tail_evidence.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/examples/: demo_evidence.rs  demo_intervene.rs  demo_orphan.rs  demo_settings.rs  e2e_dev.rs  e2e_visual.rs  finalize_evidence.rs
src-tauri/profiles/: dev.toml  visual.toml
src-tauri/profiles/templates/: dev-decider.md  dev-executor.md  dev-reviewer.md  visual-decider.md  visual-executor.md  visual-reviewer.md
src-tauri/src/: commands.rs  error.rs  lib.rs  paths.rs  settings.rs  workspace.rs
src-tauri/src/adapter/: claude.rs  codex.rs  mod.rs
src-tauri/src/bridge/: permission.rs  role.rs
src-tauri/src/orchestrator/: fsm.rs  mod.rs
src-tauri/src/profile/: mod.rs
src-tauri/src/store/: mod.rs  schema.sql  task.rs
src-tauri/tests/: manifest_anchor.rs
src/components/: NewTaskDialog.tsx  SettingsDialog.tsx  TaskList.tsx  ThreadView.tsx  WorkspacePane.tsx
src/lib/: markdown.tsx  tauri-api.ts
