[package]
name = "flow"
version = "0.1.0"
description = "Lightweight multi-agent orchestrator for Claude Code and Codex"
authors = ["duogent"]
edition = "2021"

[lib]
name = "flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Errors
anyhow = "1"
thiserror = "2"

# Persistence
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Time / ids
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
once_cell = "1"
dirs = "5"
which = "6"
